--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@angular/common": "~12.0.1",
     "@angular/compiler": "~12.0.1",
     "@angular/core": "~12.0.1",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.0.1",
     "@angular/material": "^12.2.4",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
