manejo de sesion

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,14 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    
+    "types": [],
+    "rootDir": "./src" ,
+    /* Experimental Options */
+    "experimentalDecorators": true, 
+    "emitDecoratorMetadata": true, 
+    /* Advanced Options */
+    "forceConsistentCasingInFileNames": true 
   },
   "files": [
     "src/main.ts",
